# wos-ai

./: README.md
Artifacts/: backendExtensionDetails.json  io_utils.py  qc_utils.py  qnnConfigDetails.json
Artifacts/genie_artifacts/: genie_config.json  genie_config_llama3p2_cpu.json  genie_config_llama3p2_npu.json  htp_backend_ext_config.json  prompt_llama_3p2.txt
Hyderabad-WoS-Events/WoS_Hackathon_15_2_2025/: Feedback Form_WoS.xlsx  README.md
Scripts/: MLC_setup.ps1  dml_npu_setup.ps1  genie_setup.ps1  llama_cpp_setup.ps1  mlc_setup.ps1  model_download.py  oga_setup.ps1  onnx_setup.ps1  onnx_setup_test.ps1  ort_setup.ps1  qnn_setup.ps1  setup_artifact_download.py  winml_setup.ps1
apps/: README.md  kitten_input.raw  utils.cpp
apps/ORT_Sample_app_with_NPU_Availabilty_Check/: CMakeLists.txt  kitten_input_nhwc.raw  main.cpp  mobilenetv2_helper.py  output.raw  to_fp16.py  utils.cpp  utils.h
